unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/breadwinner_ns__BW_Item__c.object-meta.xml
<CustomObject>
    <label>NetSuite Item</label>
    <nameField>
        <label>Item Name/Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>