unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__BillingScheduleInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__BillingScheduleInternalId__c</fullName>
    <label>Billing Schedule Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>