unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__Cost__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Cost__c</fullName>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>