unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__Currency__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Currency__c</fullName>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>