unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__Do_not_Import_Inventory_Locations__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Do_not_Import_Inventory_Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Import Inventory Locations</label>
    <type>Checkbox</type>
</CustomField>