unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__IncomeAccountName__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IncomeAccountName__c</fullName>
    <label>Income Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>