unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__IsFulfillable__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IsFulfillable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Fulfilled/Received</label>
    <type>Checkbox</type>
</CustomField>