unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__Location__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>breadwinner_ns__BW_Location__c</referenceTo>
    <relationshipLabel>NetSuite Items</relationshipLabel>
    <relationshipName>BWItems</relationshipName>
    <type>Lookup</type>
</CustomField>