unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__MemberInternalIdList__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__MemberInternalIdList__c</fullName>
    <label>Item Member List</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>