unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__MinimumQuantity__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__MinimumQuantity__c</fullName>
    <label>Minimum Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>