unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__OverallQuantityPricingType__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__OverallQuantityPricingType__c</fullName>
    <label>Calculate Quantity Discounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>