unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__Parent__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subitem of</label>
    <referenceTo>breadwinner_ns__BW_Item__c</referenceTo>
    <relationshipLabel>NetSuite Subitems</relationshipLabel>
    <relationshipName>Subitems</relationshipName>
    <type>Lookup</type>
</CustomField>