unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__PreferredLocation__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__PreferredLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Location</label>
    <referenceTo>breadwinner_ns__BW_Location__c</referenceTo>
    <relationshipLabel>NetSuite Items (Preferred Location)</relationshipLabel>
    <relationshipName>BWPreferredItems</relationshipName>
    <type>Lookup</type>
</CustomField>