unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__PurchaseDescription__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__PurchaseDescription__c</fullName>
    <label>Purchase Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>