unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__SubsidiaryInternalIdList__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__SubsidiaryInternalIdList__c</fullName>
    <label>Subsidiary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>