unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__UnitsType__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__UnitsType__c</fullName>
    <label>Units Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>