unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__UpcCode__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__UpcCode__c</fullName>
    <label>UPC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>