unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/fields/breadwinner_ns__UseMarginalRates__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__UseMarginalRates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Marginal Rates</label>
    <type>Checkbox</type>
</CustomField>