unpackaged/main/default/objects/breadwinner_ns__BW_Item__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__Item_Type__c</columns>
    <columns>breadwinner_ns__IsInactive__c</columns>
    <columns>breadwinner_ns__DisplayName__c</columns>
    <columns>breadwinner_ns__Parent__c</columns>
    <columns>breadwinner_ns__SalesDescription__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>